feat: add owner loyalty rule api
